<resources>
    <string name="app_name">AppSenati</string>
    <string name="logo_de_la_app">Logo de la App</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>

    <!-- Strings para cambio de contraseña -->
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_nueva_contrasena">Confirmar nueva contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="icono_candado">Icono de candado</string>

    <string-array name="areas">
        <item>SEGUIMIENTO</item>
        <item>RECEPCIÓN</item>
        <item>GERENCIA</item>
        <item>OTROS</item>
    </string-array>

</resources>